--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,60 +1,19 @@
 <head>
     <!-- Metadata -->
     {% include meta.html %}
-
-
-<!--
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
-    <meta name="author" content="{{ site.author }}">
-
-    <title>{{ site.title }}</title>
--->
-
-<!-- Bootstrap Core CSS Bootstrap CDN-->
-
-<!-- Latest compiled and minified CSS -->
-<!--
-<script
-  src="https://code.jquery.com/jquery-3.5.1.js"
-  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-  crossorigin="anonymous"></script>
--->
-<!-- Latest compiled and minified JavaScript -->
-<!--
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
--->
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-
-
-
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <!-- Bootstrap Core CSS -->
-    <!--
-     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
- -->
-     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-
+    <link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.css" type="text/css">
     <!-- Custom Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-
-    <link rel="stylesheet" href="font-awesome-5/css/all.css" type="text/css">
-<!--    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css"> -->
-
+    <link rel="stylesheet" href="{{site.baseurl}}/font-awesome-5/css/all.css" type="text/css">
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-
+    <link rel="stylesheet" href="{{site.baseurl}}/css/animate.min.css" type="text/css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/main.css" type="text/css">
-
-
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -73,5 +32,4 @@
 
         gtag('config', '{{site.google-analytics}}');
     </script>
-
 </head>
