--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
             <hr>
             <h4>{{site.hero-slug}}</h4>
 
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Get Started &emsp;<span><i class="fas fa-chevron-down"></i></span></a>
+            <a href="{{site.baseurl}}/#about" class="btn btn-primary btn-xl page-scroll">Get Started &emsp;<span><i class="fas fa-chevron-down"></i></span></a>
 
         </div>
     </div>
