--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">
+            <a class="navbar-brand page-scroll" href="{{site.baseurl}}/#page-top">
                 <span>
                     <img src="{{site.logo}}" width="30" height="30" alt="QRL Tips Logo">
                  <strong>{{site.title}}</strong></span>
@@ -19,26 +19,21 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/#about">About</a>
                 </li>
            <li>
-                    <a class="page-scroll" href="#usage">Bot Usage</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/#usage">Bot Usage</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#support">Support</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/changelog">Change Log</a>
                 </li>
-           <!--     
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/#support">Support</a>
                 </li>
-                -->
                 <li>
                     <a class="page-scroll" href="{{site.discord-link}}" target="_blank"><span><i class="fab fa-discord" style="color: #ffa729;"></i> Discord</span></a>
                 </li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
-
 </nav>
