--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -278,6 +278,67 @@ header {
     }
 }
 
+// changelog header
+cl-header {
+    position: relative;
+    width: 100%;
+    height: 75%;
+    min-height: auto;
+    @include background-cover;
+    background-position: center;
+    background-image: url('../img/clHeader.png');
+    background-attachment: fixed;
+    text-align: center;
+    color: white;
+    .cl-header-content {
+        position: relative;
+        text-align: center;
+        padding: 80px 0px 100px;
+        width: 100%;
+        .cl-header-content-inner {
+            h1 {
+                font-weight: 700;
+                text-transform: uppercase;
+                margin-top: 0;
+                margin-bottom: 0;
+            }
+            hr {
+                margin: 30px auto;
+            }
+            p {
+                font-weight: 300;
+                color: rgba(white, .7);
+                font-size: 16px;
+                margin-bottom: 50px;
+            }
+        }
+    }
+    @media (min-width: 768px) {
+        min-height: 50%;
+        width: 100%;
+        .cl-header-content {
+            position: absolute;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+            padding: 0 50px;
+            .cl-header-content-inner {
+                max-width: 100%;
+                margin-left: auto;
+                margin-right: auto;
+                p {
+                    font-size: 18px;
+                    max-width: 50%;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+            }
+        }
+    }
+}
+
+
 // Sections
 .section-heading {
     margin-top: 0;
