--- a/_includes/change-log.html
+++ b/_includes/change-log.html
@@ -1,15 +1,15 @@
-<cl-header>
+<!-- <cl-header>
     <div class="cl-header-content">
       <div class="cl-header-content-inner">
         <h1>{{site.title}}</h1>
         <hr>
-        <h3>Change-log for the QRL Tipbot</h3>
 
       </div>
   </div>
-</cl-header>
+</cl-header> -->
   <section id="changelog">
     <div class="container-fluid">
+        <h3>Change-log for the QRL Tipbot</h3>
       <div class="container">
         <div class="">
 
