adding info updates

--- a/_includes/change-log.html
+++ b/_includes/change-log.html
@@ -31,6 +31,7 @@
               <li class="list-group-item"><strong>Forever typing</strong> - Fix forever typing bot and update to message for tipping tipbot and tips command</li>
               <li class="list-group-item"><strong>Cleanup Response</strong> - Cleanup faucet responses to user</li>
               <li class="list-group-item"><strong>Hardcoded Prefix</strong> - remove hardecoded prefix for config.discord.prefix</li>
+              <li class="list-group-item"><strong>Info Command</strong> - cleanup the help output for the info command, adding random info and the qrl logo</li>
             </ul>
             <div class="clearfix">
               <h5 class="pull-left">Feature Request</h5>
