change-log --> changelog

--- a/_includes/changelog.html
+++ b/_includes/changelog.html
@@ -9,14 +9,14 @@
 </cl-header> -->
   <section id="changelog">
     <div class="container-fluid">
-        <h3>Change-log for the QRL Tipbot</h3>
+        <h3>Changelog for the QRL Tipbot</h3>
       <div class="container">
         <div class="">
 
         <!--v1.0.3 changes-->
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Tipbot V1.0.3 Change-log</h3>
+            <h3 class="panel-title">Tipbot V1.0.3 Changelog</h3>
           </div>
           <div class="panel-body">
             <div class="clearfix">
@@ -52,7 +52,7 @@
         <!--v1.0.2 changes-->
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Tipbot V1.0.2 Change-log</h3>
+            <h3 class="panel-title">Tipbot V1.0.2 Changelog</h3>
           </div>
           <div class="panel-body">
             <div class="clearfix">
