--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                 <li><a class="page-scroll" href="{{site.baseurl}}/#about">About</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#usage">Bot Usage</a></li>
                 <li><a class="page-scroll" href="{{site.baseurl}}/#support">Support</a></li>
-                <li><a class="page-scroll" href="{{site.baseurl}}/changelog">Change-Log</a></li>
+                <li><a class="page-scroll" href="{{site.baseurl}}/changelog">ChangeLog</a></li>
                 <li><a class="page-scroll" href="{{site.discord-link}}" target="_blank"><span><i class="fab fa-discord" style="color: #ffa729;"></i> Discord</span></a></li>
             </ul>
         </div>
