--- a/_layouts/changelog.html
+++ b/_layouts/changelog.html
@@ -5,7 +5,7 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {% include change-log.html %}
+  {% include changelog.html %}
 
   {% include footer.html %}
 
